# CodeCollate

./: .gitignore  README.md  codecollate_config.yaml  pyproject.toml  requirements.txt
src/codecollate/: cli.py  collator.py
src/codecollate_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
